change page title to name

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Prema is a personal responsive portfolio template based on bootstrap v3.3.6">
     <meta name="author" content="Ahmed Beheiry">
 
-	<title>Prema | Portfolio</title>
+	<title>Scott Snyder</title>
 
 	<!-- Favicons Links -->
 	<link rel="apple-touch-icon" sizes="180x180" href="img/favicons/apple-touch-icon.png">
