remove prema callouts in loading

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 	<div class="loading">
 		<div class="loading-wrapper">
 			<div class="loader"></div>
-			<h4>PreMa Loading</h4>
+			<h4>Loading</h4>
 		</div>
 	</div>
 	<!-- End Loading Page --> 
@@ -104,7 +104,7 @@
 						<span class="icon-bar"></span>
 					</button>
 					<!-- Start Logo -->
-			  		<a class="scroll-link navbar-brand" href="#top-page">Pre <span class="colored-brand">Ma</span></a>
+			  		<a class="scroll-link navbar-brand" href="#top-page">S <span class="colored-brand">JS</span></a>
 			  		<!-- End Logo -->
 				</div>
 
@@ -145,7 +145,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-xs-12">
-							<h1>I'm John Doe</h1>
+							<h1>I'm Scott Snyder</h1>
 							<p>Creative<span class="dot"></span>designer<span class="dot"></span>developer</p>
 							<a href="#portfolio" class="scroll-link btn btn-custom reverse light">My Works</a>
 							<a href="#contact" class="scroll-link btn btn-custom">Hire Me</a>
