update about me and ready section

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 			<i class="fa fa-gear fa-spin"></i>
 		</div>
 		<div class="colors">
-			<p class="para">Choose your favourite color</p>
+			<p class="para">Choose your favorite color</p>
 			<hr>
 			<ul class="list-unstyled"> <!-- Colors boxes -->
 				<li class="color-slot" data-background="#f7465b" data-target="css/colors/color-1.css"></li>
@@ -146,7 +146,7 @@
 					<div class="row">
 						<div class="col-xs-12">
 							<h1>I'm Scott Snyder</h1>
-							<p>Frontend<span class="dot"></span>Backend<span class="dot"></span>UI / UX</p>
+							<p>Software Engineer<span class="dot"></span>San Francisco, CA</p>
 							<a href="#portfolio" class="scroll-link btn btn-custom reverse light">My Works</a>
 							<a href="#contact" class="scroll-link btn btn-custom">Contact</a>
 						</div>
@@ -207,8 +207,8 @@
 						<div role="tabpanel" class="tab-pane fade in active" id="about-me-panel">
 							<h4>About Me</h4>
 							<div class="separator"></div>
-							<p class="para"><span>Hello, <br> Iam JOHN DOE, Front-End Developer with 3 years of experience rapidiously productize wireless results.</span></p>
-							<p class="para">whereas multidisciplinary intellectual capital. Distinctively synergize market-driven innovation and prospective channels. Dramatically drive an expanded array of expertise with distinctive technology. Completely cultivate standardized manufactured.</p>
+							<p class="para"><span>Hello, <br> I'm Scott, a Software Developer experienced building web applications using JavaScript, Ruby on Rails, and React/Redux.</span></p>
+							<p class="para">About me placeholder</p>
 						</div>
 						<!-- Why Me Panel -->
 						<div role="tabpanel" class="tab-pane fade" id="why-me-panel">
@@ -235,7 +235,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-12">
-					<h3 class="wow fadeInLeft" data-wow-duration="1s" data-wow-offset="200">I'm Ready For your Projects. Hire Me Now</h3>
+					<h3 class="wow fadeInLeft" data-wow-duration="1s" data-wow-offset="200">Want to work together? Let's get in touch.</h3>
 					<a href="#contact" class="wow fadeInUp scroll-link btn btn-custom light outline-white" data-wow-duration="1s" data-wow-offset="200">Contact me</a>
 					<a href="#" class="wow fadeInUp btn btn-custom dark outline-white"  data-wow-duration="1s" data-wow-offset="200" data-wow-delay="0.2s"><i class="fa fa-download"></i> My resume</a>
 				</div>
