update experiences section

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 	<!-- End Ready Section -->
 
 	<!-- Start Process Section -->
-	<section id="process" class="section">
+	<!--<section id="process" class="section">
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-12">
@@ -255,9 +255,9 @@
 						<p class="para">Dramatically repurpose low-risk high-yield ideas without robust customer service. Intrinsicly build fully tested total linkage without scalable.</p>
 					</div>
 				</div>
-			</div>
+			</div>-->
 			<!-- Step 1 -->
-			<div class="row process-step">
+			<!--<div class="row process-step">
 				<div class="col-sm-7">
 					<div class="process-text wow fadeInLeft" data-wow-duration="1s" data-wow-offset="200">
 						<i class="fa fa-bar-chart"></i>
@@ -271,9 +271,9 @@
 						<img src="http://placehold.it/1000x670" alt="Planning" class="img-responsive">
 					</div>
 				</div>
-			</div>
+			</div>-->
 			<!-- Step 2 -->
-			<div class="row process-step">
+			<!--<div class="row process-step">
 				<div class="col-sm-7 col-sm-push-5">
 					<div class="process-text wow fadeInRight" data-wow-duration="1s" data-wow-offset="200">
 						<i class="fa fa-pencil"></i>
@@ -287,9 +287,9 @@
 						<img src="http://placehold.it/1000x670" alt="Designing" class="img-responsive">
 					</div>
 				</div>				
-			</div>
+			</div>-->
 			<!-- Step 3 -->
-			<div class="row process-step">
+			<!--<div class="row process-step">
 				<div class="col-sm-7">
 					<div class="process-text wow fadeInLeft" data-wow-duration="1s" data-wow-offset="200">
 						<i class="fa fa-code"></i>
@@ -303,9 +303,9 @@
 						<img src="http://placehold.it/1000x670" alt="Development" class="img-responsive">
 					</div>
 				</div>
-			</div>
+			</div>-->
 			<!-- Step 4 -->
-			<div class="row process-step">
+			<!--<div class="row process-step">
 				<div class="col-sm-7 col-sm-push-5">
 					<div class="process-text wow fadeInRight" data-wow-duration="1s" data-wow-offset="200">
 						<i class="fa fa-tv"></i>
@@ -321,11 +321,11 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</section>-->
 	<!-- End Process Section -->
 
 	<!-- Start Fun Facts Section -->
-	<section id="fun-facts" class="section text-center parallax">
+	<!--<section id="fun-facts" class="section text-center parallax">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row">
@@ -337,30 +337,30 @@
 					</div>
 				</div>	
 			</div>
-			<div class="row">
+			<div class="row">-->
 			<!-- Fact No. ( 1 ) -->
-				<div class="fact col-md-3 col-sm-6">
+				<!--<div class="fact col-md-3 col-sm-6">
 					<i class="fa fa-tasks"></i>
 					<span class="timer" data-from="0" data-to="215" data-speed="3000" data-refresh-interval="50"></span>
 					<div class="separator centered"></div>
 					<p>projects done</p>
-				</div>
+				</div>-->
 				<!-- Fact No. ( 2 ) -->
-				<div class="fact col-md-3 col-sm-6">
+				<!--<div class="fact col-md-3 col-sm-6">
 					<i class="fa fa-users"></i>
 					<span class="timer" data-from="0" data-to="650" data-speed="3000" data-refresh-interval="50"></span>
 					<div class="separator centered"></div>
 					<p>happy clients</p>
-				</div>
+				</div>-->
 				<!-- Fact No. ( 3 ) -->
-				<div class="fact col-md-3 col-sm-6">
+				<!--<div class="fact col-md-3 col-sm-6">
 					<i class="fa fa-clock-o"></i>
 					<span class="timer" data-from="0" data-to="3475" data-speed="3000" data-refresh-interval="50"></span>
 					<div class="separator centered"></div>
 					<p>hours worked</p>
-				</div>
+				</div>-->
 				<!-- Fact No. ( 4 ) -->
-				<div class="fact col-md-3 col-sm-6">
+				<!--<div class="fact col-md-3 col-sm-6">
 					<i class="fa fa-coffee"></i>
 					<span class="timer" data-from="0" data-to="781" data-speed="3000" data-refresh-interval="50"></span>
 					<div class="separator centered"></div>
@@ -368,7 +368,7 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</section>-->
 	<!-- End Fun Facts Section -->
 
 	<!-- Start Services Section -->
@@ -451,100 +451,115 @@
 					<div class="section-intro">
 						<h2>My Experiences</h2>
 						<div class="separator centered"></div>
-						<p class="para">Objectively cultivate equity invested customer service without intermandated methodologies. Intrinsicly productivate interactive strategic theme areas via goal-oriented.</p>
+						<p class="para">Take a virtual walk down my (currently) unidirectional path through the time dimension.</p>
 					</div>
 				</div>
 			</div>
 			<!-- Start Timeline -->
 			<div class="timeline-wrapper">
 				<div class="timeline">
+					<!-- Event ( 0 ) -->
+					<div class="event row">
+						<div class="col-sm-3 col-xs-12 event-left wow fadeInUp" data-wow-duration="1s" data-wow-offset="200">
+							<h4>2017</h4>
+							<i class="fa fa-code fa-fw"></i>
+						</div>
+						<div class="col-sm-9 col-xs-12 event-right wow fadeInUp" data-wow-duration="1s" data-wow-offset="200">
+							<div class="content-wrapper">
+								<h4>App Academy</h4>
+								<div class="separator"></div>
+								<p class="job-title">Software Engineering Apprentice</p>
+								<p class="para">Designed and Implemented upgrade for critical admissions dashboard, refactoring and integrating with legacy Rails code while collaborating with coworkers using Git workflow. Guided incoming applicants through technical interviews while assessing algorithmic aptitude and providing feedback in various languages, including Ruby, Javascript, Python and Java.</p>
+							</div>	
+						</div>
+					</div>
 					<!-- Event ( 1 ) -->
 					<div class="event row">
 						<div class="col-sm-3 col-xs-12 event-left wow fadeInUp" data-wow-duration="1s" data-wow-offset="200">
-							<h4>Apr. 2016</h4>
+							<h4>2017</h4>
 							<i class="fa fa-diamond fa-fw"></i>
 						</div>
 						<div class="col-sm-9 col-xs-12 event-right wow fadeInUp" data-wow-duration="1s" data-wow-offset="200">
 							<div class="content-wrapper">
-								<h4>Lexinda</h4>
+								<h4>App Academy</h4>
 								<div class="separator"></div>
-								<p class="job-title">UI / UX Developer</p>
-								<p class="para">Dramatically incentivize bleeding-edge core competencies via dynamic users. Progressively provide access to best-of-breed markets whereas multidisciplinary services. Quickly restore orthogonal expertise whereas highly efficient.</p>
+								<p class="job-title">Full Time Immersive Student</p>
+								<p class="para">Rigorous, 1000-hour programming bootcamp with <4% acceptance rate. Their full stack web development course focuses on algorithms, TDD, OOP and best practices.</p>
 							</div>	
 						</div>
 					</div>
 					<!-- Event ( 2 ) -->
 					<div class="event row">
 						<div class="col-sm-3 col-xs-12 event-left wow fadeInUp" data-wow-duration="1s" data-wow-offset="200">
-							<h4>Aug. 2015</h4>
-							<i class="fa fa-trophy fa-fw"></i>
+							<h4>2014 - 2016</h4>
+							<i class="fa fa-lightbulb-o fa-fw"></i>
 						</div>
 						<div class="col-sm-9 col-xs-12 event-right wow fadeInUp" data-wow-duration="1s" data-wow-offset="200">
 							<div class="content-wrapper">
-								<h4>New Era Studio</h4>
+								<h4>M*Modal</h4>
 								<div class="separator"></div>
-								<p class="job-title">UI / UX Developer</p>
-								<p class="para">Dramatically incentivize bleeding-edge core competencies via dynamic users. Progressively provide access to best-of-breed markets whereas multidisciplinary services. Quickly restore orthogonal expertise whereas highly efficient.</p>
+								<p class="job-title">Financial Analyst</p>
+								<p class="para">Managed $250M of software and coding revenue, collaborating with product managers and engineering team to develop revenue forecasts based on new product rollouts in an Agile development environment. Implemented Adaptive Insights financial planning software, including parsing data from a complex, 7-segment GL string to custom pivotable table dimensions.</p>
 							</div>	
 						</div>
 					</div>
 					<!-- Event ( 3 ) -->
 					<div class="event row">
 						<div class="col-sm-3 col-xs-12 event-left wow fadeInUp" data-wow-duration="1s" data-wow-offset="200">
-							<h4>Apr. 2015</h4>
-							<i class="fa fa-lightbulb-o fa-fw"></i>
+							<h4>2011 - 2014</h4>
+							<i class="fa fa-line-chart fa-fw"></i>
 						</div>
 						<div class="col-sm-9 col-xs-12 event-right wow fadeInUp" data-wow-duration="1s" data-wow-offset="200">
 							<div class="content-wrapper">
-								<h4>Agent Studios</h4>
+								<h4>PricewaterhouseCoopers, LLP</h4>
 								<div class="separator"></div>
-								<p class="job-title">Front-End Designer</p>
-								<p class="para">Dramatically incentivize bleeding-edge core competencies via dynamic users. Progressively provide access to best-of-breed markets whereas multidisciplinary services. Quickly restore orthogonal expertise whereas highly efficient.</p>
+								<p class="job-title">Experienced Associate</p>
+								<p class="para">Voluntarily learned SQL to independently complete 100% of accuracy testing of client queries and reports. Coordinated audit strategy planning for $500K+ audits of Fortune 300 companies.</p>
 							</div>	
 						</div>
 					</div>
 					<!-- Event ( 4 ) -->
 					<div class="event row">
 						<div class="col-sm-3 col-xs-12 event-left wow fadeInUp" data-wow-duration="1s" data-wow-offset="200">
-							<h4>Apr. 2014</h4>
-							<i class="fa fa-suitcase fa-fw"></i>
+							<h4>2010 - 2011</h4>
+							<i class="fa fa-calculator fa-fw"></i>
 						</div>
 						<div class="col-sm-9 col-xs-12 event-right wow fadeInUp" data-wow-duration="1s" data-wow-offset="200">
 							<div class="content-wrapper">
-								<h4>Matrix Studio</h4>
+								<h4>University of North Carolina - Chapel Hill</h4>
 								<div class="separator"></div>
-								<p class="job-title">Junior UI / UX Designer</p>
-								<p class="para">Dramatically incentivize bleeding-edge core competencies via dynamic users. Progressively provide access to best-of-breed markets whereas multidisciplinary services. Quickly restore orthogonal expertise whereas highly efficient.</p>
+								<p class="job-title">Graduate Degree</p>
+								<p class="para">Masters of Accounting (MAC).</p>
 							</div>	
 						</div>
 					</div>
 					<!-- Event ( 5 ) -->
 					<div class="event row">
 						<div class="col-sm-3 col-xs-12 event-left wow fadeInUp" data-wow-duration="1s" data-wow-offset="200">
-							<h4>Jan. 2014</h4>
-							<i class="fa fa-certificate fa-fw"></i>
+							<h4>2009 - 2010</h4>
+							<i class="fa fa-laptop fa-fw"></i>
 						</div>
 						<div class="col-sm-9 col-xs-12 event-right wow fadeInUp" data-wow-duration="1s" data-wow-offset="200">
 							<div class="content-wrapper">
-								<h4>Diploma</h4>
+								<h4>Kenan-Flagler Business School at UNC Chapel Hill</h4>
 								<div class="separator"></div>
-								<p class="job-title">Graphic Design Diploma.</p>
-								<p class="para">Dramatically incentivize bleeding-edge core competencies via dynamic users. Progressively provide access to best-of-breed markets whereas multidisciplinary services. Quickly restore orthogonal expertise whereas highly efficient.</p>
+								<p class="job-title">IT Helpdesk Apprentice</p>
+								<p class="para">Assisted KFBS faculty and students by troubleshooting and fixing hardware, software and networking issues. Created how-to guides and instructional videos for the KFBS Intranet page to teach users how to solve technology-related problems.</p>
 							</div>	
 						</div>
 					</div>
 					<!-- Event ( 6 ) -->
 					<div class="event graduation row">
 						<div class="col-sm-3 col-xs-12 event-left wow fadeInUp" data-wow-duration="1s" data-wow-offset="200">
-							<h4>July 2013</h4>
+							<h4>2006 - 2010</h4>
 							<i class="fa fa-graduation-cap fa-fw"></i>
 						</div>
 						<div class="col-sm-9 col-xs-12 event-right last-event wow fadeInUp" data-wow-duration="1s" data-wow-offset="200">
 							<div class="content-wrapper">
-								<h4>Graduation</h4>
+								<h4>University of North Carolina - Chapel Hill</h4>
 								<div class="separator"></div>
-								<p class="job-title">Faculty of Engineering</p>
-								<p class="para">Dramatically incentivize bleeding-edge core competencies via dynamic users. Progressively provide access to best-of-breed markets whereas multidisciplinary services. Quickly restore orthogonal expertise whereas highly efficient.</p>
+								<p class="job-title">Undergraduate Degree</p>
+								<p class="para">Bachelor of Science (BS) in Business Administration - Finance.</p>
 							</div>	
 						</div>
 					</div>
@@ -633,17 +648,17 @@
 			<div class="row">
 				<div class="col-xs-12">
 					<div class="section-intro">
-						<h2>Check out my works</h2>
+						<h2>My project portfolio</h2>
 						<div class="separator centered"></div>
-						<p class="para">Intrinsicly conceptualize real-time information without cross functional potentialities. Conveniently impact integrated benefits and ubiquitous paradigms. Dynamically architect.</p>
+						<p class="para">Click thumbnails below for more details.</p>
 					</div>
 				</div>
 			</div>
 			<div class="controls">
 				<button class="filter btn btn-custom" data-filter="all" data-toggle="tooltip" data-placement="top" title="12">All</button>
-				<button class="filter btn btn-custom" data-filter=".design" data-toggle="tooltip" data-placement="top" title="4">Design</button>
-				<button class="filter btn btn-custom" data-filter=".development" data-toggle="tooltip" data-placement="top" title="5">Development</button>
-				<button class="filter btn btn-custom" data-filter=".branding" data-toggle="tooltip" data-placement="top" title="5">Branding</button>
+				<button class="filter btn btn-custom" data-filter=".frontend" data-toggle="tooltip" data-placement="top" title="4">Frontend</button>
+				<button class="filter btn btn-custom" data-filter=".backend" data-toggle="tooltip" data-placement="top" title="5">Backend</button>
+				<button class="filter btn btn-custom" data-filter=".fullstack" data-toggle="tooltip" data-placement="top" title="5">Fullstack</button>
 			</div>
 			<div id="Container" class="row">
 				<!-- Project 1 -->
