add Snowscape as first project

--- a/index.html
+++ b/index.html
@@ -662,15 +662,15 @@
 			</div>
 			<div id="Container" class="row">
 				<!-- Project 1 -->
-				<div class="mix design branding col-md-4 col-sm-6 col-xs-12" data-my-order="1">
+				<div class="mix design fullstack col-md-4 col-sm-6 col-xs-12" data-my-order="1">
 					<div class="project" data-toggle="modal" data-target="#modal">
 						<div class="project-img-wrapper">
 							<img class="center-block img-responsive" src="http://placehold.it/800x600" alt="project-1">
 						</div>
 						<div class="img-overlay">
 							<div class="overlay-text">
-								<h4>Project Name</h4>
-								<p>design / branding</p>
+								<h4>Snowscape</h4>
+								<p>Fullstack Web Developer</p>
 							</div>
 						</div>
 					</div>	
@@ -680,14 +680,14 @@
 					    <div class="modal-content">
 					      <div class="modal-header">
 					        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-					        <h4 class="modal-title" id="label_1">Project Name</h4>
+					        <h4 class="modal-title" id="label_1">Snowscape</h4>
 					      </div>
 					      <div class="modal-body">
 					        <img class="center-block img-responsive thumbnail" src="http://placehold.it/800x600" alt="project-1">
-					        <h4>Project Name</h4>
+					        <h4>Snowscape</h4>
 					        <div class="separator"></div>
-					        <p class="para subtitle">( design, branding )</p>
-					        <p class="para project-description">Energistically develop reliable content for leading-edge networks. Dramatically enhance optimal testing procedures and multimedia based e-commerce. Holisticly syndicate standardized human capital without extensible experiences. <br> Efficiently synthesize client-based solutions through resource sucking systems. Proactively visualize mission-critical paradigms before competitive value. Efficiently disintermediate resource sucking e-markets via visionary e-markets. Efficiently.</p>
+					        <p class="para subtitle">Fullstack Web Developer</p>
+					        <p class="para project-description">Javascript | React | Redux | Ruby on Rails | PostgreSQL | HTML5 | CSS <br>Interactive single-page web app based on Yelp where users can review ski resorts. Has integrated Google Maps API that updates search results and marker locations in real-time on keypress and custom designed resort detail page including expandable trail map, scrolling photo carousel, show/hide panel for additional mountain statistics</p>
 					        <a href="#" class="btn btn-custom btn-custom-reverse">Live Preview</a>
 					        <a href="#contact" class="btn btn-custom dark scroll-link" data-dismiss="modal">Start Project</a>
 					      </div>
