remove google maps section

--- a/index.html
+++ b/index.html
@@ -1325,7 +1325,7 @@
 	<!-- End Contact Section -->
 
 	<!-- Start Google Map Section -->
-	<section id="map" class="gmap"></section>
+	<!--<section id="map" class="gmap"></section>-->
 	<!-- End Google Map Section -->
 
 	<!-- Start Footer Section -->
