remove services section

--- a/index.html
+++ b/index.html
@@ -112,9 +112,6 @@
 							<a class="scroll-link" href="#about">About</a>
 						</li>
 						<li>
-							<a class="scroll-link" href="#services">Services</a>
-						</li>
-						<li>
 							<a class="scroll-link" href="#experiences">Experiences</a>
 						</li>
 						<li>
@@ -366,7 +363,7 @@
 	<!-- End Fun Facts Section -->
 
 	<!-- Start Services Section -->
-	<section id="services" class="section text-center">
+	<!--<section id="services" class="section text-center">
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-12">
@@ -377,50 +374,50 @@
 					</div>
 				</div>
 			</div>
-			<div class="row">
+			<div class="row">-->
 			<!-- Service No. ( 1 ) -->
-				<div class="service col-md-4 col-sm-6 wow fadeInUp" data-wow-duration="1s" data-wow-offset="200">
+				<!--<div class="service col-md-4 col-sm-6 wow fadeInUp" data-wow-duration="1s" data-wow-offset="200">
 					<i class="fa fa-paint-brush"></i>
 					<h4>Graphic Design</h4>
 					<p class="para">Collaboratively maintain tactical niche markets whereas functionalized catalysts for change. Collaboratively transform.</p>
-				</div>
+				</div>-->
 				<!-- Service No. ( 2 ) -->
-				<div class="service col-md-4 col-sm-6 wow fadeInUp" data-wow-duration="1s" data-wow-offset="200">
+				<!--<div class="service col-md-4 col-sm-6 wow fadeInUp" data-wow-duration="1s" data-wow-offset="200">
 					<i class="fa fa-object-group"></i>
 					<h4>Web Design</h4>
 					<p class="para">Enthusiastically maximize equity invested niches for enterprise-wide human capital. Rapidiously cultivate maintainable.</p>
-				</div>
+				</div>-->
 				<!-- Service No. ( 3 ) -->
-				<div class="service col-md-4 col-sm-6 wow fadeInUp" data-wow-duration="1s" data-wow-offset="200">
+				<!--<div class="service col-md-4 col-sm-6 wow fadeInUp" data-wow-duration="1s" data-wow-offset="200">
 					<i class="fa fa-code"></i>
 					<h4>Development</h4>
 					<p class="para">Collaboratively maintain tactical niche markets whereas functionalized catalysts for change. Collaboratively transform.</p>
-				</div>
+				</div>-->
 				<!-- Service No. ( 4 ) -->
-				<div class="service col-md-4 col-sm-6 wow fadeInUp" data-wow-duration="1s" data-wow-offset="200">
+				<!--<div class="service col-md-4 col-sm-6 wow fadeInUp" data-wow-duration="1s" data-wow-offset="200">
 					<i class="fa fa-envira"></i>
 					<h4>branding</h4>
 					<p class="para">Enthusiastically maximize equity invested niches for enterprise-wide human capital. Rapidiously cultivate maintainable.</p>
-				</div>
+				</div>-->
 				<!-- Service No. ( 5 ) -->
-				<div class="service col-md-4 col-sm-6 wow fadeInUp" data-wow-duration="1s" data-wow-offset="200">
+				<!--<div class="service col-md-4 col-sm-6 wow fadeInUp" data-wow-duration="1s" data-wow-offset="200">
 					<i class="fa fa-support"></i>
 					<h4>24/7 support</h4>
 					<p class="para">Collaboratively maintain tactical niche markets whereas functionalized catalysts for change. Collaboratively transform.</p>
-				</div>
+				</div>-->
 				<!-- Service No. ( 6 ) -->
-				<div class="service col-md-4 col-sm-6 wow fadeInUp" data-wow-duration="1s" data-wow-offset="200">
+				<!--<div class="service col-md-4 col-sm-6 wow fadeInUp" data-wow-duration="1s" data-wow-offset="200">
 					<i class="fa fa-eye"></i>
 					<h4>Retina Ready</h4>
 					<p class="para">Enthusiastically maximize equity invested niches for enterprise-wide human capital. Rapidiously cultivate maintainable.</p>
 				</div>
 			</div>
 		</div>
-	</section>
+	</section>-->
 	<!-- End Services Section -->
 
 	<!-- Start Quote Section -->
-	<section id="quote" class="section parallax">
+	<!--<section id="quote" class="section parallax">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row">
@@ -434,7 +431,7 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</section>-->
 	<!-- End Quote Section -->
 
 	<!-- Start Experiences Section -->
