update Snowscape project details and links

--- a/index.html
+++ b/index.html
@@ -548,24 +548,24 @@
 					        <h4>Snowscape</h4>
 					        <div class="separator"></div>
 					        <p class="para subtitle">Fullstack Web Developer</p>
-					        <p class="para project-description">Javascript | React | Redux | Ruby on Rails | PostgreSQL | HTML5 | CSS <br>Interactive single-page web app based on Yelp where users can review ski resorts. Has integrated Google Maps API that updates search results and marker locations in real-time on keypress and custom designed resort detail page including expandable trail map, scrolling photo carousel, show/hide panel for additional mountain statistics</p>
-					        <a href="#" class="btn btn-custom btn-custom-reverse">Live Preview</a>
-					        <a href="#contact" class="btn btn-custom dark scroll-link" data-dismiss="modal">Start Project</a>
+					        <p class="para project-description">Javascript | React | Redux | Ruby on Rails | PostgreSQL | HTML5 | CSS <br>Interactive single-page web app based on Yelp where users can review ski resorts. Integrates Google Maps API that updates search results and marker locations in real-time on keypress. Includes a custom designed resort detail page including expandable trail map, scrolling photo carousel, show/hide panel for additional mountain statistics.</p>
+					        <a href="http://www.snowscape.life/" class="btn btn-custom btn-custom-reverse">Live</a>
+					        <a href="https://github.com/sijos/Snowscape" class="btn btn-custom dark">Github</a>
 					      </div>
 					    </div>
 					  </div>
 					</div>  <!-- End Modal -->
 				</div>
 				<!-- Project 2 -->
-				<div class="mix branding col-md-4 col-sm-6 col-xs-12" data-my-order="2">
+				<div class="mix frontend col-md-4 col-sm-6 col-xs-12" data-my-order="2">
 					<div class="project" data-toggle="modal" data-target="#modal-2">
 						<div class="project-img-wrapper">
 							<img class="center-block img-responsive" src="http://placehold.it/800x600" alt="project-2">
 						</div>
 						<div class="img-overlay">
 							<div class="overlay-text">
-								<h4>Project Name</h4>
-								<p>branding</p>
+								<h4>LiveGrid</h4>
+								<p>Frontend Web Developer</p>
 							</div>
 						</div>
 					</div>	
@@ -575,13 +575,13 @@
 					    <div class="modal-content">
 					      <div class="modal-header">
 					        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-					        <h4 class="modal-title" id="label_2">Project Name</h4>
+					        <h4 class="modal-title" id="label_2">LiveGrid</h4>
 					      </div>
 					      <div class="modal-body">
 					        <img class="center-block img-responsive thumbnail" src="http://placehold.it/800x600" alt="project-2">
-					        <h4>Project Name</h4>
+					        <h4>LiveGrid</h4>
 					        <div class="separator"></div>
-					        <p class="para subtitle">( branding )</p>
+					        <p class="para subtitle">Frontend Web Developer</p>
 					        <p class="para project-description">Professionally procrastinate cross-platform ROI without ubiquitous intellectual capital. Holisticly customize highly efficient "outside the box" thinking before seamless imperatives. <br> Efficiently develop customized manufactured products with inexpensive web services. Dynamically grow unique ROI with dynamic action items. Efficiently morph superior ROI via out-of-the-box systems. Professionally foster maintainable process improvements.</p>
 					        <a href="#" class="btn btn-custom btn-custom-reverse">Live Preview</a>
 					        <a href="#contact" class="btn btn-custom dark scroll-link" data-dismiss="modal">Start Project</a>
