add Snowscape image link

--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
 				<div class="mix design fullstack col-md-4 col-sm-6 col-xs-12" data-my-order="1">
 					<div class="project" data-toggle="modal" data-target="#modal">
 						<div class="project-img-wrapper">
-							<img class="center-block img-responsive" src="http://placehold.it/800x600" alt="project-1">
+							<img class="center-block img-responsive" src="img/projects/snowscape.png" alt="project-1">
 						</div>
 						<div class="img-overlay">
 							<div class="overlay-text">
@@ -544,7 +544,7 @@
 					        <h4 class="modal-title" id="label_1">Snowscape</h4>
 					      </div>
 					      <div class="modal-body">
-					        <img class="center-block img-responsive thumbnail" src="http://placehold.it/800x600" alt="project-1">
+					        <img class="center-block img-responsive thumbnail" src="img/projects/snowscape.png" alt="project-1">
 					        <h4>Snowscape</h4>
 					        <div class="separator"></div>
 					        <p class="para subtitle">Fullstack Web Developer</p>
