add LiveGrid project

--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
 				<div class="mix frontend col-md-4 col-sm-6 col-xs-12" data-my-order="2">
 					<div class="project" data-toggle="modal" data-target="#modal-2">
 						<div class="project-img-wrapper">
-							<img class="center-block img-responsive" src="http://placehold.it/800x600" alt="project-2">
+							<img class="center-block img-responsive" src="img/projects/LiveGrid.png" alt="project-2">
 						</div>
 						<div class="img-overlay">
 							<div class="overlay-text">
@@ -578,13 +578,13 @@
 					        <h4 class="modal-title" id="label_2">LiveGrid</h4>
 					      </div>
 					      <div class="modal-body">
-					        <img class="center-block img-responsive thumbnail" src="http://placehold.it/800x600" alt="project-2">
+					        <img class="center-block img-responsive thumbnail" src="img/projects/LiveGrid.png" alt="project-2">
 					        <h4>LiveGrid</h4>
 					        <div class="separator"></div>
 					        <p class="para subtitle">Frontend Web Developer</p>
-					        <p class="para project-description">Professionally procrastinate cross-platform ROI without ubiquitous intellectual capital. Holisticly customize highly efficient "outside the box" thinking before seamless imperatives. <br> Efficiently develop customized manufactured products with inexpensive web services. Dynamically grow unique ROI with dynamic action items. Efficiently morph superior ROI via out-of-the-box systems. Professionally foster maintainable process improvements.</p>
-					        <a href="#" class="btn btn-custom btn-custom-reverse">Live Preview</a>
-					        <a href="#contact" class="btn btn-custom dark scroll-link" data-dismiss="modal">Start Project</a>
+					        <p class="para project-description">Javascript | React.js | CSS <br> Live music generation web app allows users to create patterns and learn basic synthesizer functions. Synthesizes audio in real-time using sequencer functionality from Tone.js library. Users can set tempo and shape sounds using adjustable effects via interface control knobs and sliders. </p>
+					        <a href="https://sijos.github.io/LiveGrid/" class="btn btn-custom btn-custom-reverse">Live</a>
+					        <a href="https://github.com/sijos/LiveGrid" class="btn btn-custom dark">Github</a>
 					      </div>
 					    </div>
 					  </div>
