update skill %s and remove description paragraphs

--- a/index.html
+++ b/index.html
@@ -437,9 +437,9 @@
 			<div class="row">
 				<div class="col-xs-12">
 					<div class="section-intro">
-						<h2>my powerful skills</h2>
+						<h2>my skills</h2>
 						<div class="separator centered"></div>
-						<p class="para">Continually transform process-centric systems rather than compelling growth strategies. Energistically streamline low-risk high-yield supply chains via scalable intellectual capital. Dramatically benchmark customer.</p>
+						<p class="para">I'm already set to contribute using the following technologies, <br> and I'm always in process of adding more to my skillset!</p>
 					</div>
 				</div>
 			</div>
@@ -451,7 +451,6 @@
 						<span class="percent">%</span>
 					</div>
 					<h3>Javascript</h3>
-					<p class="para">Collaboratively reintermediate optimal growth strategies whereas cross.</p>
 				</div>
 				<!-- Skill No. ( 2 ) -->
 				<div class="skill col-md-4 col-sm-6">
@@ -460,16 +459,14 @@
 						<span class="percent">%</span>
 					</div>
 					<h3>Ruby on Rails</h3>
-					<p class="para">Objectively integrate viral manufactured products for bleeding-edge.</p>
 				</div>
 				<!-- Skill No. ( 3 ) -->
 				<div class="skill col-md-4 col-sm-6">
 					<div class="chart" data-percent="70">
-						<span class="skill-timer" data-from="0" data-to="70" data-speed="1500"></span>
+						<span class="skill-timer" data-from="0" data-to="85" data-speed="1500"></span>
 						<span class="percent">%</span>
 					</div>
 					<h3>React</h3>
-					<p class="para">Completely actualize clicks-and-mortar systems for bleeding-edge data.</p>
 				</div>
 				<!-- Skill No. ( 4 ) -->
 				<div class="skill col-md-4 col-sm-6">
@@ -478,52 +475,46 @@
 						<span class="percent">%</span>
 					</div>
 					<h3>Redux</h3>
-					<p class="para">Monotonectally incubate front-end innovation with emerging methods.</p>
 				</div>
 				<!-- Skill No. ( 5 ) -->
 				<div class="skill col-md-4 col-sm-6">
 					<div class="chart" data-percent="85">
-						<span class="skill-timer" data-from="0" data-to="85" data-speed="1500"></span>
+						<span class="skill-timer" data-from="0" data-to="65" data-speed="1500"></span>
 						<span class="percent">%</span>
 					</div>
 					<h3>jQuery</h3>
-					<p class="para">Professionally facilitate process-centric customer service vis-a-vis premium.</p>
 				</div>
 				<!-- Skill No. ( 6 ) -->
 				<div class="skill col-md-4 col-sm-6">
 					<div class="chart" data-percent="60">
-						<span class="skill-timer" data-from="0" data-to="60" data-speed="1500"></span>
+						<span class="skill-timer" data-from="0" data-to="85" data-speed="1500"></span>
 						<span class="percent">%</span>
 					</div>
 					<h3>HTML5</h3>
-					<p class="para">Seamlessly integrate backward-compatible information and plug-and-play.</p>
 				</div>
 				<!-- Skill No. ( 7 ) -->
 				<div class="skill col-md-4 col-sm-6">
 					<div class="chart" data-percent="60">
-						<span class="skill-timer" data-from="0" data-to="60" data-speed="1500"></span>
+						<span class="skill-timer" data-from="0" data-to="70" data-speed="1500"></span>
 						<span class="percent">%</span>
 					</div>
 					<h3>CSS3</h3>
-					<p class="para">Seamlessly integrate backward-compatible information and plug-and-play.</p>
 				</div>
 				<!-- Skill No. ( 8 ) -->
 				<div class="skill col-md-4 col-sm-6">
 					<div class="chart" data-percent="60">
-						<span class="skill-timer" data-from="0" data-to="60" data-speed="1500"></span>
+						<span class="skill-timer" data-from="0" data-to="85" data-speed="1500"></span>
 						<span class="percent">%</span>
 					</div>
 					<h3>SQL</h3>
-					<p class="para">Seamlessly integrate backward-compatible information and plug-and-play.</p>
 				</div>
 				<!-- Skill No. ( 9 ) -->
 				<div class="skill col-md-4 col-sm-6">
 					<div class="chart" data-percent="60">
-						<span class="skill-timer" data-from="0" data-to="60" data-speed="1500"></span>
+						<span class="skill-timer" data-from="0" data-to="50" data-speed="1500"></span>
 						<span class="percent">%</span>
 					</div>
 					<h3>Java</h3>
-					<p class="para">Seamlessly integrate backward-compatible information and plug-and-play.</p>
 				</div>
 			</div>
 		</div>
